build_output_utf8.txt

> shop-manager@0.0.0 build
> vite build

[36mvite v8.0.3 [32mbuilding client environment for production...[36m[39m
[2K
transforming...Γ£ô 1735 modules transformed.
node.exe : [31mΓ£ù[39m 
Build failed in 467ms
At line:1 char:1
+ & "C:\Program 
Files\nodejs/node.exe" 
"C:\Program 
Files\nodejs/node_mo ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~
    + CategoryInfo        
      : NotSpecified: (  
  [31mΓ£ù[39m Build fa   
 iled in 467ms:String)    
 [], RemoteException
    + FullyQualifiedError 
   Id : NativeCommandErr  
  or
 
[31merror during build:
[31mBuild failed with 1 
error:

[plugin vite:css-post]
SyntaxError: 
[lightningcss minify] 
Unknown at rule: 
@keyframes
45 |  }
46 |  
47 |  @keyframes 
pulse-ring {
   |                      
 ^
48 |    0% { transform: 
translate(-50%, -50%) 
scale(0.8); opacity: 0.3; 
}
49 |    50% { transform: 
translate(-50%, -50%) 
scale(1.2); opacity: 0.6; 
}
    at Module.<anonymous> 
(C:\Users\itworld\.gemini\
antigravity\scratch\shop-m
anager\node_modules\lightn
ingcss\node\index.js:56:14
)
    at minifyCSS (file:///
C:/Users/itworld/.gemini/a
ntigravity/scratch/shop-ma
nager/node_modules/vite/di
st/node/chunks/node.js:212
02:59)
    at async finalizeCss (
file:///C:/Users/itworld/.
gemini/antigravity/scratch
/shop-manager/node_modules
/vite/dist/node/chunks/nod
e.js:21048:36)
    at async Promise.all 
(index 1)
    at async Object.run (f
ile:///C:/Users/itworld/.g
emini/antigravity/scratch/
shop-manager/node_modules/
vite/dist/node/chunks/node
.js:2436:22)
    at async PluginContext
Impl.renderChunk (file:///
C:/Users/itworld/.gemini/a
ntigravity/scratch/shop-ma
nager/node_modules/vite/di
st/node/chunks/node.js:205
87:19)
    at async plugin (file:
///C:/Users/itworld/.gemin
i/antigravity/scratch/shop
-manager/node_modules/roll
down/dist/shared/bindingif
y-input-options-e7ze4hPR.m
js:1234:16)
    at async 
plugin.<computed> (file://
/C:/Users/itworld/.gemini/
antigravity/scratch/shop-m
anager/node_modules/rolldo
wn/dist/shared/bindingify-
input-options-e7ze4hPR.mjs
:1593:12)[31m
    at aggregateBindingErr
orsIntoJsError (file:///C:
/Users/itworld/.gemini/ant
igravity/scratch/shop-mana
ger/node_modules/rolldown/
dist/shared/error-BLhcSyeg
.mjs:48:18)
    at 
unwrapBindingResult (file:
///C:/Users/itworld/.gemin
i/antigravity/scratch/shop
-manager/node_modules/roll
down/dist/shared/error-BLh
cSyeg.mjs:18:128)
    at #build (file:///C:/
Users/itworld/.gemini/anti
gravity/scratch/shop-manag
er/node_modules/rolldown/d
ist/shared/rolldown-build-
CPrIX9V6.mjs:3313:34)
    at async 
buildEnvironment (file:///
C:/Users/itworld/.gemini/a
ntigravity/scratch/shop-ma
nager/node_modules/vite/di
st/node/chunks/node.js:328
49:64)
    at async Object.build 
(file:///C:/Users/itworld/
.gemini/antigravity/scratc
h/shop-manager/node_module
s/vite/dist/node/chunks/no
de.js:33271:19)
    at async 
Object.buildApp (file:///C
:/Users/itworld/.gemini/an
tigravity/scratch/shop-man
ager/node_modules/vite/dis
t/node/chunks/node.js:3326
8:153)
    at async 
CAC.<anonymous> (file:///C
:/Users/itworld/.gemini/an
tigravity/scratch/shop-man
ager/node_modules/vite/dis
t/node/cli.js:778:3) {
  errors: [Getter/Setter]
}[39m
